--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 				<!--/////////// End Archive List //////////-->
 
 				<!--/////////// Deals //////////-->
-				<div class="col-3 clearfix">
+				<div class="col-3 first clearfix">
 					<section class="shadow col-1 first">
 						<figure>
 							<img src="images/lady_bug_shoe.jpg" alt="Pair of Lady Bug Shoes">
